Fixed: Align items

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -103,6 +103,8 @@
         min-width: 100%;
         width: 100dvh;
         height: auto;
+
+        align-items: center;
     
         padding: 5rem 0rem 5rem 0rem;
     
@@ -160,6 +162,8 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+
+        align-items: center;
     
         gap: 2rem;
     }
